# swift-driver

./: .gitattributes  .gitignore  .licenseignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Package.resolved  Package.swift  Package@swift-5.1.swift  Package@swift-5.5.swift  README.md  build-script.py  test-fails.txt
Sources/: CMakeLists.txt
Sources/ArgumentParserOptions/: Options.swift
Sources/CSwiftScan/: CMakeLists.txt  CSwiftScanImpl.c
Sources/CSwiftScan/include/: module.modulemap  swiftscan_header.h
Sources/CToolchainCASPlugin/: CMakeLists.txt  ToolchainCASPluginImpl.c
Sources/CToolchainCASPlugin/include/: ToolchainCASPlugin_CAPI.h  module.modulemap
Sources/DriverDefaults/: constants.c
Sources/DriverDefaults/include/: constants.h  module.modulemap
Sources/SwiftDriver/: CMakeLists.txt  CompilerMode.swift  DebugInfo.swift  Diagnostics.swift  Driver.swift  DriverKind.swift  FileType.swift  InputFile.swift  Job.swift  JobExecutor.swift  LinkKind.swift  Option.swift  OptionParsing.swift  OptionTable.swift  Options.swift  OutputFileMap.swift  ParsedOptions.swift  Toolchain.swift  VirtualPath.swift  llbuild.swift
Sources/SwiftDriver/Dependency Scanning/: InterModuleDependencyGraph.swift  ModuleDependencyBuildGeneration.swift  ModuleDependencyGraph.swift
Sources/SwiftDriver/Driver/: CompilerMode.swift  CompundExecutionDelegate.swift  DebugInfo.swift  Driver.swift  DriverKind.swift  DriverVersion.swift  IncrementalCompilation.swift  LinkKind.swift  ModuleDependencyScanning.swift  ModuleOutputInfo.swift  OutputFileMap.swift  ReferenceDependenciesProcessingDelegate.swift  StatsReporter.swift  TextualOutputJobExecutionDelegate.swift  ToolExecutionDelegate.swift  WindowsExtensions.swift
Sources/SwiftDriver/Execution/: ArgsResolver.swift  DriverExecutor.swift  JobExecutor.swift  MultiJobExecutor.swift  ParsableOutput.swift  ProcessProtocol.swift  ProcessSet.swift  llbuild.swift
Sources/SwiftDriver/Explicit Module Builds/: ClangModuleBuildJobCache.swift  ClangVersionedDependencyResolution.swift  CommonDependencyGraphOperations.swift  ExplicitDependencyBuildPlanner.swift  ExplicitModuleBuildHandler.swift  InterModuleDependencyGraph.swift  ModuleArtifacts.swift  ModuleDependencyScanning.swift  PlaceholderDependencyResolution.swift  SerializableModuleArtifacts.swift  SwiftModuleArtifacts.swift
Sources/SwiftDriver/ExplicitModuleBuilds/: ClangVersionedDependencyResolution.swift  ExplicitDependencyBuildPlanner.swift  ModuleDependencyScanning.swift  PlaceholderDependencyResolution.swift  SerializableModuleArtifacts.swift
Sources/SwiftDriver/Incremental Compilation/: BidirectionalMap.swift  BuildRecord.swift  BuildRecordInfo.swift  DepGraphIntegrator.swift  DependencyGraph.swift  DependencyKey.swift  DictionaryOfDictionaries.swift  IncrementalCompilation.swift  IncrementalCompilationState.swift  InputIInfoMap.swift  InputInfo.swift  JobTracker.swift  ModuleDepGraphNode.swift  ModuleDepGraphTracer.swift  ModuleDependencyGraph.swift  Multdictionary.swift  Multidictionary.swift  NodeFinder.swift  NodesAndUses.swift  SourceFileDependencyGraph.swift  SynchronizedQueue.swift  TwoDMap.swift
Sources/SwiftDriver/IncrementalCompilation/: BidirectionalMap.swift  BuildRecord.swift  BuildRecordInfo.swift  DependencyGraphDotFileWriter.swift  DependencyKey.swift  DictionaryOfDictionaries.swift  DirectAndTransitiveCollections.swift  ExternalDependencyAndFingerprintEnforcer.swift  FirstWaveComputer.swift  IncrementalCompilationProtectedState.swift  IncrementalCompilationState+Extensions.swift  IncrementalCompilationState.swift  IncrementalCompilationSynchronizer.swift  IncrementalDependencyAndInputSetup.swift  InitialStateComputer.swift  InputInfo.swift  KeyAndFingerprintEnforcer.swift  KeyAndFingerprintHolder.swift  ModuleDependencyGraph.swift  Multidictionary.swift  SourceFileDependencyGraph.swift  SwiftSourceFile.swift  TwoDMap.swift  TwoLevelMap.swift
Sources/SwiftDriver/Jobs/: APIDigesterJobs.swift  AutolinkExtractJob.swift  BackendJob.swift  CommandInvocation.swift  CommandLineArguments.swift  CompileJob.swift  DarwinToolchain+LinkerSupport.swift  EmitModuleJob.swift  EmitSupportedFeaturesJob.swift  EmscriptenToolchain+LinkerSupport.swift  FilesystemJobs.swift  FrontendJobHelpers.swift  GenerateDSYMJob.swift  GenerateDWPJob.swift  GeneratePCHJob.swift  GeneratePCMJob.swift  GenericUnixToolchain+LinkerSupport.swift  InterpretJob.swift  JITBuildJob.swift  Job.swift  LinkJob.swift  MergeModuleJob.swift  ModuleWrapJob.swift  Planning.swift  PrebuiltModulesJob.swift  PrintSupportedFeaturesJob.swift  PrintTargetInfoJob.swift  ReplJob.swift  SwiftHelpIntroJob.swift  SymbolGraphExtractJob.swift  Toolchain+InterpreterSupport.swift  Toolchain+LinkerSupport.swift  VerifyDebugInfoJob.swift  VerifyModuleInterfaceJob.swift  WASIToolchain+LinkerSupport.swift  WebAssemblyToolchain+LinkerSupport.swift  WebAssemblyToolchainProtocol+LinkerSupport.swift  WindowsToolchain+LinkerSupport.swift
Sources/SwiftDriver/Options/: ExtraOptions.swift  Option.swift  OptionParsing.swift  OptionTable.swift  Options.swift  ParsedOptions.swift
Sources/SwiftDriver/SwiftDriver.docc/: ExplicitModuleBuilds.md  IncrementalBuilds.md  Info.plist  (+1 more)
Sources/SwiftDriverExecution/: CMakeLists.txt  MultiJobExecutor.swift  SwiftDriverExecutor.swift  llbuild.swift
Sources/SwiftOptions/: CMakeLists.txt  DriverKind.swift  ExtraOptions.swift  Option.swift  OptionParsing.swift  OptionTable.swift  Options.swift  ParsedOptions.swift  PrefixTrie.swift
Sources/_CSwiftDriver/: CMakeLists.txt
Sources/argument-parser-bench/: Arguments.swift  Challenger.swift  Champion.swift  Options.swift  main.swift
Sources/driver/: OptionParser.swift  OptionTable.swift  Options.swift  main.swift
Sources/makeOptions/: CMakeLists.txt  main.cpp  makeOptions.cpp
Sources/swift-build-sdk-interfaces/: CMakeLists.txt  main.swift
Sources/swift-driver/: CMakeLists.txt  main.swift
Sources/swift-explain/: CMakeLists.txt  main.swift
Sources/swift-help/: CMakeLists.txt  main.swift
Tests/ToolingTestShim/: CMakeLists.txt  CToolingTestShimImpl.c
(+497 files in other folders)
